# Game

./: CMakeLists.txt  game.cpp  game.h  main.cpp
BattlefieldWindow/: CMakeLists.txt  battlefield.cpp  battlefield.h  battlefield.ui  resouces.qrc
BattlefieldWindow/BattleScene/: CMakeLists.txt  battlescene.cpp  battlescene.h
BattlefieldWindow/BattleScene/Items/: CMakeLists.txt  items.h
BattlefieldWindow/BattleScene/Items/Unit/: CMakeLists.txt  resouces.qrc  unit.cpp  unit.h
BattlefieldWindow/BattleScene/Items/Unit/AnimationPixmaps/: CMakeLists.txt  animationpixmaps.cpp  animationpixmaps.h
BattlefieldWindow/BattleScene/Items/Unit/Character/: CMakeLists.txt  character.cpp
BattlefieldWindow/Department/: CMakeLists.txt  department.cpp  department.h
BattlefieldWindow/Items/: CMakeLists.txt  items.cpp  items.h
BattlefieldWindow/Items/Cell/: CMakeLists.txt
BattlefieldWindow/Items/Unit/: CMakeLists.txt  unit.cpp  unit.h
BattlefieldWindow/Items/Unit/Character/: character.h
BattlefieldWindow/Items/Unit/Новая папка/: character.cpp  character.h  core.h  department.h  depspecialtricks.cpp  specialtrick.cpp  specialtrick.h
BattlefieldWindow/SpecialTricks/: CMakeLists.txt  charspecialtricks.cpp  depspecialtricks.cpp  specialtrick.cpp  specialtrick.h
InvitationWindow/: CMakeLists.txt  invitationwindow.cpp  invitationwindow.h  invitationwindow.ui
SettingsWindow/: CMakeLists.txt  gamesettingswindow.cpp  gamesettingswindow.h  gamesettingswindow.ui  gamesettinswindow.cpp  gamesettinswindow.h  settingswindow.ui
StartWindow/: CMakeLists.txt  startwindow.cpp  startwindow.h  startwindow.ui
